<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnPindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnPindahDenganData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_dengan_data"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnPindahDenganObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pindah_activity_dengan_object"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnPindahUntukResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity_untuk_result"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnKeenam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_google_website"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnTelpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_a_number"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnMap"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_my_home"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_dari_activity"
        android:textAlignment="center"
        />

</LinearLayout>